tests/testFiles/semanticErrors/reassignconstant.meme
overlyattachedgirlfriend.jpg con = "Hello";
con = 10;
